--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,6 @@ html, body{
     font-family: Arial, Helvetica, sans-serif;
   }
   
-
   
   .container{
     max-width: 1300px;
@@ -50,10 +49,12 @@ html, body{
     
   }
 
-  
+  img#fotoPerfil{
+    border-radius: 49%;
+  }
   .a3_1{
     display: inline-block;
-    width: 80%;
+    width: 75%;
     text-align: right;
     padding: 23px 0;
      
@@ -61,7 +62,7 @@ html, body{
   .a3_2{
     display: inline-block;
     float: right;
-    width: 80%;
+    width: 75%;
     text-align: right;
     padding: 26px 0;
      
