--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital@1&family=Roboto:ital,wght@0,100;1,400&display=swap');
+
 html, body{
     background-color: aliceblue;
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
   }
   
   
@@ -41,7 +43,7 @@ html, body{
   .afotoDePerfil{
     display: inline-block;
     float: left;
-    width: 20%;
+    width: 15%;
     
     padding: 0px 0;
     margin: 0px;
@@ -50,7 +52,7 @@ html, body{
   }
 
   img#fotoPerfil{
-    border-radius: 49%;
+    border-radius: 5%;
   }
   .a3_1{
     display: inline-block;
