--- a/style4.css
+++ b/style4.css
@@ -1,33 +1,70 @@
+html, body{
+    background-color: rgb(217, 243, 217);
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    max-width: 1400px;
+    margin: 0px auto;
+    padding: 0;
+
+  }
 
 .cima {
-    background-color: green;
+    display: inline-block;
+    background-color: rgb(6, 26, 6);
     width: 100%;
     height: 50px;
+    top: 0;
+    text-align: center;
+    border-bottom-left-radius: 5px ;
+    
 }
 
-.cima h1 {
+.cima h2 {
     color: white;
-    justify-content: center;
+    font-size: x-large;
+    
+   
+
 }
 
-/* .left {
-    background-color: rgb(199, 101, 101);
-    width: 30%;
-    height: 400px;
-    float: left;
-} */
 
-.divfoto {
-    background-color: gray;
+
+.titulo {
+   
+    width: 100%;
+   
+
+
+}
+
+.titulo h3 {
+    padding: 0px;
+    margin: 10px;
+}
+.left {
     width: 30%;
     height: 430px;
     float: left;
+    justify-content: center;
+}
+
+.divfoto {
+    background-color: rgba(49, 92, 62, 0.098);
+    width:250px;
+    height: 400px;
+    /* float: left; */
+    display: block;
+    margin: 0px auto;
+    border-radius: 25px;
+
+
 }
 
 .divfoto img {
-    border-radius: 25px;
-    display: block;
-    margin: 8px auto;
+    border-radius: 10px;
+
+    margin: 0px auto;
 
 }
 
@@ -41,7 +78,6 @@
     
 }
 .pt1 {
-    background-color: blanchedalmond;
     width: 70%;
     height: 150px;
     float: right;
@@ -52,7 +88,6 @@
 
 }
 .pt2 {
-    background-color: rgb(80, 140, 92);
     width: 70%;
 
     height: 150px;
@@ -60,14 +95,12 @@
 }
 
 .pt3 {
-    background-color: rgb(56, 45, 96);
     width: 70%;
     height: 130px;
     float: right;
 }
 
 .contato {
-    background-color: rgb(96, 45, 59);
     width: 100%;
     height: 100px;
     float: left;
