--- a/style4.css
+++ b/style4.css
@@ -1,5 +1,5 @@
 html, body{
-    background-color: rgb(217, 243, 217);
+    background-color: #ecf8ef;
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
@@ -8,6 +8,11 @@ html, body{
     padding: 0;
 
   }
+
+body {
+    background-image: url("./outerspace-58.gif");
+}
+
 
 .cima {
     display: inline-block;
@@ -31,9 +36,9 @@ html, body{
 
 
 .titulo {
-   
+    color: rgb(31, 223, 31);
     width: 100%;
-   
+    height: 200px;
 
 
 }
@@ -55,7 +60,7 @@ html, body{
     height: 400px;
     /* float: left; */
     display: block;
-    margin: 0px auto;
+    margin: -100px auto;
     border-radius: 25px;
 
 
@@ -77,6 +82,12 @@ html, body{
     float: right;
     
 }
+
+.pt1 h3 {
+    color: rgb(31, 223, 31);
+
+}
+
 .pt1 {
     width: 70%;
     height: 150px;
@@ -107,5 +118,6 @@ html, body{
 }
 
 .contato p{
-    padding-left: 20px;
+    color: rgb(31, 223, 31);
+    padding-left: 7%;
 }
